--- a/src/main.css
+++ b/src/main.css
@@ -29,6 +29,18 @@ button {
 main {
   margin: 0 auto;
   background-color: #fff;
+}
+
+.modal {
+  position: absolute;
+  overflow-y: auto;
+  inset: 0;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.field {
   border: 1px solid #dfe3e8;
   padding: 15px;
   border-radius: 8px;
@@ -36,6 +48,7 @@ main {
   flex-direction: column;
   gap: 10px;
 }
+
 .footer {
   display: flex;
   align-items: center;
